--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-B7U366M\\SQLEXPRESS;Database=CLDV6212_PART3;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=tcp:st10040092sever.database.windows.net,1433;Initial Catalog=CLDV6212_PART3;Persist Security Info=False;User ID=ST10040092_Admin_SQL;Password= Northwood_21;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
